homepage: react_github

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react_github",
   "version": "0.1.0",
+  "homepage": "react_github/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
